# clipnest

./: .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  install.nsi  prebuild.ps1  vcpkg.json
.github/: FUNDING.yml
.github/workflows/: build.yml
clipnest/: CMakeLists.txt  clipnest.rc  cliptomania.rc  global.h  hash.cpp  hash.h  main.cpp  mini_result_popup.cpp  mini_result_popup.h  operation.cpp  operation.h
clipnest/ops/: disk.cpp  disk.h  general.cpp  general.h
docs/: README.md
